อะล็อตอ๊อฟแซ๊งส์

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,13 @@
-DB_PATH=data/subs.db
-MODEL_PATH=models/yolo11n.onnx
+# Example .env file for human-count project
+
+DB_PATH=subs.db
+MODEL_PATH=yolo11s.pt
 IMG_SIZE=640
-CONF_THRES=0.35
+CONF_THRES=0.3
 IOU_THRES=0.45
 PERSON_CLASS_ID=0
 HEARTBEAT_SEC=15
-ORT_THREADS=2
+
+STABLE_WINDOW=5
+STABLE_FRAMES=3
+INSTANT_CONF=0.32
